--- a/Dissertation.Rmd
+++ b/Dissertation.Rmd
@@ -112,16 +112,15 @@ set.seed(973)
 
 # Introduction
 
-Artificial Neural Networks (ANN) are computational models inspired by the brain; made up of layers of interconnected "neurons" which learn patterns when given large amounts of data. After learning patterns from the data, ANNs can make inference to predict an output based on some given input. ANNs have long been used for application ranging from computer vision to financial forecasting. However the use of ANNs has surged recently, increasing fourfold since 2017, driven by the development of generative AI models like ChatGPT. In addition to this, models are growing in size and becoming more complex, consequently the global AI power consumption is increasing at an exponential rate [@kindigAIPowerConsumption]. Not only does this make models expensive to operate, but it also raises sustainability concerns. 
+Artificial Neural Networks (ANN) are computational models inspired by the brain; made up of layers of interconnected "neurons" which can learn patterns when given large amounts of data. After learning patterns, ANNs can be used to make inferences, predicting an output based on some given input. ANNs have long been used for application ranging from computer vision to financial forecasting. However the use of ANNs has surged recently, increasing fourfold since 2017, driven by the development of generative AI models like ChatGPT [@StateAI2025]. To compound this, models are growing in size and becoming more complex, consequently the global AI power consumption is increasing at an exponential rate [@kindigAIPowerConsumption]. Not only does this make models expensive to operate, but it also raises sustainability concerns. 
 
-A graphics processing unit (GPU) running a large language model (LLM) can consume hundreds of watts of power, whereas the human brain processes sensory information, controls motor functions, runs its own language model, and enables conscious thought — all while using only about 20 watts. Such efficient information processing has motivated research into neuromorphic computing - a field aiming to emulate the brain’s neural architecture. Spiking Neural Networks (SNNs) are considered the third generation of neural network models [@maassNetworksSpikingNeurons1997], they more closely model how biological neurons behave in the brain than ANNs. For a second generation neuron, the output is a weighted sum of the inputs passed through an activation function (Figure \@ref(fig:my-image) (a). For a third generation neuron, the output is a train of spikes which varies in timing and frequency (Figure \@ref(fig:my-image) (b). Since information is encoded in the timing of outputs, SNNs can inherently capture temporal patterns and dynamic behaviours in sequential data, making them theoretically better at processing tasks involving time-dependent signals, such as speech recognition, sensory processing, and event-based data streams. It has been shown that SNNs theoretically posses higher computational power than the previous generation of ANNs [@maassComputationalPowerCircuits2004]. Unlike ANNs, spiking neurons only activate when necessary and don't require a clock signal, enabling massive power savings. For instance, the leading neuromorphic platform TrueNorth is capable of simulating a million spiking neurons in real-time while consuming 63 mW. The equivalent network executed on a high-performance computing platform was 100–200× slower than real-time and consumed 100,000 to 300,000× more energy per synaptic event [@merollaMillionSpikingneuronIntegrated2014]. The power savings of SNNs could be game-changing in edge computing devices that run on battery, like smartphones or remote environmental sensors. On top of this, their low-latency could benefit autonomous vehicles and robotics. The scope of SNN applications is great. In addition to the advantage in theoretical computational power, the power efficiency, and low-latency, SNNs tend to be more explainable (heard this on a video from MIT training SNNs to drive a car).
+A graphics processing unit (GPU) running a large language model (LLM) consumes hundreds of watts of power. On the other hand, the human brain processes sensory information, keeps involuntary biological systems functioning, runs its own language model, and enables conscious thought — all while using only about 20 watts. Such efficient information processing has motivated research into neuromorphic computing - a field aiming to emulate the brain’s neural architecture. Spiking Neural Networks (SNNs) are considered the third generation of neural network models [@maassNetworksSpikingNeurons1997], where ANNs are considered the second generation. Compared to neurons in ANNs, SNN neurons more closely model how biological neurons behave in the brain. For a second generation neuron, the output is a weighted sum of the inputs passed through an activation function (see Figure \@ref(fig:my-image) (a)). For a third generation neuron, the output is a spike, sometimes referred to as an event, which occurs when the voltage of a neuron surpasses a threshold (Figure \@ref(fig:my-image) (b)), this results in neurons communicating with each other via series of spikes, which vary in timing and frequency. Since information is encoded in the timing of outputs, SNNs can inherently capture temporal patterns and dynamic behaviours in sequential data, making them inherently capable at processing tasks involving time-dependent signals, such as speech recognition, sensory processing, and event-based data streams. Moreover, it has been shown that SNNs theoretically posses higher computational power than the previous generation of ANNs [@maassComputationalPowerCircuits2004]. Spiking neurons only activate when necessary, and don't require a clock signal, enabling massive power savings. For instance, the leading neuromorphic platform TrueNorth is capable of simulating a million spiking neurons in real-time while consuming 63 mW. The equivalent network executed on a high-performance computing platform was 100–200× slower than real-time and consumed 100,000 to 300,000× more energy per synaptic event [@merollaMillionSpikingneuronIntegrated2014]. The power savings of SNNs could be game-changing in edge computing devices that run on battery or have limited power budgets - like smartphones or remote environmental sensors. On top of this, their low-latency could benefit autonomous vehicles and robotics. (Benefit of being more explainable?)
 
-![(a) ANN neuron (b) SNN neuron](images/x26xqlra.png){#fig:my-image}
+![(a) ANN neuron (b) SNN neuron](images/ann_vs_snn_neuron_model_diagra.png)
 
 # Spiking neuron model
 
-The leaky integrate-and-fire (LIF) neuron model is the most widely used for SNNs. simple, fast, and scalable for large networks, though less biologically detailed. Equations (\ref{eqn:lif1}), (\ref{eqn:lif2}), and (\ref{eqn:lif3}) define how LIF neurons behave.
-
+The leaky integrate-and-fire (LIF) neuron model is the most widely used neuronal model in SNNs due to its simplicity and efficiency which helps it scale for larger networks. The neuron receives weighted spiking inputs from other neurons as can be seen in figure \@ref(fig:my-image) (b). Spikes received by a neuron at time $t$ induce a current $X[t]$. This input current increases the membrane potential, $V[t]$, which is the voltage between the inside of the neuron and the outside. The voltage slowly decays over time, the speed of the decay depends on the membrane time constant, $\tau$. This is the "Leaky Integrate" aspect of the neuron; $X[t]$ is integrated to give $V[t]$ at the same time as $V[t]$ leaks voltage. The neuron leaks voltage till it reaches it's baseline voltage level, $V_{reset}$. This behaviour can be seen in equation (\ref{eqn:lif1}), $H[t]$ is equal equation (\ref{eqn:lif1})to $V[t]$, unless a spike occurs during $t$. This spiking logic is defined in equation (\ref{eqn:lif2}), where $\Theta(x)$ is a function that is $0$ unless $x\geq0$. In other words this function becomes 1 only when the threshold voltage $V_{th}$ is reached. When the threshold voltage is reached, $V[t]$ is set to $V_{reset}$ and a spike is released; if the threshold voltage is not reached then $V[t] = H[t]$. The membrane potential behaviour at spike time is defined in equation (\ref{eqn:lif3}).
 
 \begin{equation}
 H[t] = V[t-1] +\frac{1}{\tau}(X[t]-(V[t-1]-V_{reset})),
@@ -138,6 +137,10 @@ V[t]=H[t](1-S[t])+V_{reset}S[t]
 \label{eqn:lif3}
 \end{equation}
 
+Synapse Models
+
+
+
 ---
 
 Literature discussing different parameters to adjust: firing threshold [@wangLTMDLearningImprovement2022], membrane time constant [@fangIncorporatingLearnableMembrane2021a], weights [@rathiDIETSNNLowLatencySpiking2023], activation function between charging and firing [@jiangKLIFOptimizedSpiking2023].
@@ -153,7 +156,7 @@ Other models of neurons include:
 --- 
 
 Todo: Information coding 
-In digital images, each pixel is stored as a number which represents the light red, green, and blue light intensity at that point - a higher number indicates greater intensity of light. In digital audio, each timestep is encoded as a number which indicates the strength of the pressure perturbation at that particular time. So how then can an image or audio be passed into a spiking neural network? In other words, how is it turned into spikes? Methods for coding information into spike trains can be classified into two groups - rate coding and temporal coding. A good place to start would be taking inspiration from the brain. Rate coding transfers information in the frequency of spikes at a given moment. Initially it was thought that rate coding was the predominant technique to transmit information within the nervous system [@adrianImpulsesProducedSensory1926], however 
+In digital images, each pixel is stored as a number which represents the red, green, and blue light intensity at that point - a higher number indicates greater intensity of light. In digital audio, each timestep is encoded as a number which indicates the strength of the pressure perturbation at that particular time. So how can an image or audio be passed into a spiking neural network? In other words, how is it turned into spikes? Methods for coding information into spike trains can be classified into two groups - rate coding and temporal coding. A good place to start would be taking inspiration from the brain. Rate coding transfers information in the frequency of spikes at a given moment. Initially it was thought that rate coding was the predominant technique to transmit information within the nervous system [@adrianImpulsesProducedSensory1926], however 
 
 
 ---
@@ -161,6 +164,8 @@ In digital images, each pixel is stored as a number which represents the light r
 Todo: Why I will focus on audio data.
 
 # Training Neural Networks
+
+## Backpropagation
 
 Backpropagation is the most widely used and effective method for training second generation artificial neural networks. It operates by iteratively adjusting the network's weights to minimize error. The process follows these key steps:
 
