--- a/Dissertation.Rmd
+++ b/Dissertation.Rmd
@@ -120,6 +120,9 @@ A graphics processing unit (GPU) running a large language model (LLM) consumes h
 
 # Spiking Neuron Model
 
+
+## Leaky Integrate-and-Fire Neuron
+
 The leaky integrate-and-fire (LIF) neuron model is the most widely used neuronal model in SNNs due to its simplicity and efficiency which helps it scale for larger networks. The neuron receives weighted spiking inputs from other neurons as can be seen in figure \@ref(fig:my-image) (b). Spikes received by a neuron at time $t$ induce a current $X[t]$. This input current increases the membrane potential, $V[t]$, which is the voltage between the inside of the neuron and the outside. The voltage slowly decays over time, the speed of the decay depends on the membrane time constant, $\tau$. This is the "Leaky Integrate" aspect of the neuron; $X[t]$ is integrated to give $V[t]$ at the same time as $V[t]$ leaks voltage. The neuron leaks voltage till it reaches it's baseline voltage level, $V_{reset}$. This behaviour can be seen in equation (\ref{eqn:lif1}), $H[t]$ is equal equation (\ref{eqn:lif1})to $V[t]$, unless a spike occurs during $t$. This spiking logic is defined in equation (\ref{eqn:lif2}), where $\Theta(x)$ is a function that is $0$ unless $x\geq0$. In other words this function becomes 1 only when the threshold voltage $V_{th}$ is reached. When the threshold voltage is reached, $V[t]$ is set to $V_{reset}$ and a spike is released; if the threshold voltage is not reached then $V[t] = H[t]$. The membrane potential behaviour at spike time is defined in equation (\ref{eqn:lif3}).
 
 \begin{equation}
@@ -158,16 +161,34 @@ Other models of neurons include:
 Todo: Information coding 
 In digital images, each pixel is stored as a number which represents the red, green, and blue light intensity at that point - a higher number indicates greater intensity of light. In digital audio, each timestep is encoded as a number which indicates the strength of the pressure perturbation at that particular time. So how can an image or audio be passed into a spiking neural network? In other words, how is it turned into spikes? Methods for coding information into spike trains can be classified into two groups - rate coding and temporal coding. A good place to start would be taking inspiration from the brain. Rate coding transfers information in the frequency of spikes at a given moment. Initially it was thought that rate coding was the predominant technique to transmit information within the nervous system [@adrianImpulsesProducedSensory1926], however 
 
-
+ 
 ---
 
-Todo: Why I will focus on audio data.
 
 # Training Neural Networks
 
 ## Backpropagation
 
-Backpropagation is the most widely used and effective method for training second generation artificial neural networks. It operates by iteratively adjusting the network's weights to minimize error. The process follows these key steps:
+Backpropagation is the most widely used and effective method for training second generation artificial neural networks. Backpropagation is a method for finding the gradient of the "loss" with respect to the networks weights, i.e. how much changing a given weight would increase or decrease the loss. To demonstrate how backpropagation works, let's consider a fully-connected network consisting of a layer of input neurons, hidden neurons, and output neurons. Fully-connected means each neuron in a layer is connected to all neurons in the following layer . 
+The input neurons take the values of the input that is presented to the network. 
+
+
+
+
+The loss is a way of quantifying how far away the output of the network is from the desired output. A common way to calculate the loss is by calculating the mean squared error (MSE), where you find the sum of the squared differences between the actual output neuron values and the desired output neuron values (Equation (\ref{eqn:loss_mse})).
+
+\begin{equation}
+L= \frac{1}{n} \sum^{n}_{i=1}(y_{i}- \hat{y}_i​)^2
+\label{eqn:loss_mse}
+\end{equation}
+
+
+
+It operates by iteratively adjusting the network's weights to minimize error. 
+
+
+
+The process follows these key steps:
 
 1. **Forward Pass**: The model receives an input and processes it through its layers, generating an output.
 2. **Error Calculation**: The output is compared to the desired target, and a **loss function** quantifies the error.
